--- a/index.html
+++ b/index.html
@@ -5,8 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morsalin Kausar</title>
+    <!-- favicon setup -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,600&display=swap" rel="stylesheet">
+    <!-- css setup -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <section class="top_benner extra-flex">
+        <div class="width-half">
+            <h1>wellcome to</h1>
+            <h1><span>morsalin kausar</span> world</h1>
+            <h4>web designer and devoloper</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus unde sed maxime magnam pariatur saepe omnis libero ea, officia nostrum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate similique debitis esse nisi consequatur ab laborum, eum harum exercitationem quam, facilis ut quasi earum dignissimos ipsa incidunt odio hic. Corporis!</p>
+            <a class="hire-me-button" href="https://www.linkedin.com/in/morsalin-kausar-2aa235215/" target="_blank" rel="noopener noreferrer">hire me</a>
+        </div>
+        <div class="width-half ">
+            <img src="./images//cuteboy.png" alt="" srcset="">
+        </div>
+    </section>
+
+    <section class="extra-flex second-banner">
+        <div class="width-half">
+            <img src="./images/styleman.png" alt="">
+        </div>
+        <div class="width-half ">
+            <h1>dream big</h1>
+            <h4>became a web devoloper</h4>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, illo. Officiis dicta, saepe a error nemo rem voluptatum ratione consequatur dolorum, odio non quia minima ea voluptates, eius repellat quisquam.</P>
+            <a class="hire-me-button" href="#">download cv</a>
+        </div>
+    </section>
+
+    <section>
+        <h1>expreince</h1>
+        <div class="extra-flex">
+            <div class="width-half left-border">
+                <h1>Full Stack Web Developer</h1>
+                <h4>2021-Present | Pro Level Developer</h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="width-half left-border">
+                <h1>Baby Web Developer</h1>
+                <h4>2020-2021 | Programming Hero Learner</h4>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+        <h4 class="fotter-title">© Peter Parker 2021, a Programming Hero initiative.</h4>
+    </section>
 </body>
 </html>
