--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section>
         <h1>expreince</h1>
-        <div class="extra-flex">
+        <div class="extra-flex bg-add">
             <div class="width-half left-border">
                 <h1>Full Stack Web Developer</h1>
                 <h4>2021-Present | Pro Level Developer</h4>
