--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,600&display=swap" rel="stylesheet">
+    <!-- favicon setup -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <!-- css setup -->
     <link rel="stylesheet" href="style.css">
 </head>
