--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <section>
         <h1>expreince</h1>
         <div class="extra-flex bg-add">
-            <div class="width-half left-border">
+            <div class="width-half left-border left-border-gone">
                 <h2>Full Stack Web Developer</h2>
                 <h4>2021-Present | Pro Level Developer</h4>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="width-half left-border">
+            <div class="width-half left-border left-border-gone">
                 <h2>Baby Web Developer</h2>
                 <h4>2020-2021 | Programming Hero Learner</h4>
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
         </div>
         <h4 class="fotter-title">© Peter Parker 2021, a Programming Hero initiative.</h4>
